# natural-treatment

./: .env.example  .gitignore  CLAUDE.md  README.md
docs/: API_REFERENCE.html  API_REFERENCE.md  ARCHITECTURE.html  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.html  DEVELOPER_GUIDE.md  HERB_EXPANSION_PLAN.md  KAFKA_INTEGRATION_DESIGN.md  PRODUCTION_READINESS.md  PRODUCTION_TESTING_CHECKLIST.md  TECHNICAL_GUIDE.html  TECHNICAL_GUIDE.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/src/: i18n.ts  locales.ts  middleware.ts
frontend/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: ChatPanel.tsx  EmailExport.tsx  Footer.tsx  Header.tsx  HerbDetailModal.tsx  LanguagePicker.tsx  LanguageSwitcher.tsx  Logo.tsx  SummaryPanel.tsx
frontend/src/data/: herbDetails.ts
frontend/src/hooks/: useLocaleSwitch.ts
frontend/src/lib/: api.ts
frontend/src/messages/: en.json  es.json  fr.json  hi.json  zh.json
infra/: docker-compose.prod.yml  docker-compose.yml
infra/nginx/: nginx.conf
research docs/: New Text Document.txt  application_design.md  application_design_v2_microservices_agentic.md  initial_research.txt
seed/: Dockerfile  load_seed.py
seed/data/: compounds.json  herb_details.json  herbs.json  rules.json  symptoms.json
services/agents/explanation/: Dockerfile  main.py
services/email/: Dockerfile  main.py  pom.xml
services/gateway/: Dockerfile  main.py
services/orchestrator/: Dockerfile  main.py  pom.xml
shared/: pyproject.toml
shared/shared/: cache.py  llm.py  models.py
(+114 files in other folders)
