[project]
name = "natural-treatment-shared"
version = "0.1.0"
description = "Shared models, cache helpers, and LLM wrapper used by every backend service"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "redis>=5.0",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*"]
